# orbbec

./: .canon.yaml  .gitignore  CMakeLists.txt  CMakeUserPresets.json  Makefile  README.md  conanfile.py  first_run.sh  install_udev_rules.sh  meta.json  start.sh
.conan/profiles/: mingw-windows
.conan2/profiles/: mingw-windows
.github/: lint.yml
.github/workflows/: build.yml  lint.yml  publish.yml
cmake/: fetch_orbbec.cmake
etc/: Dockerfile.base.l4t  Dockerfile.ubuntu.jammy
packaging/appimages/: orbbec-module-aarch64.yml  orbbec-module-x86_64.yml  viam-camera-orbbec-x86_64.yml
src/cli/: main.cpp
src/cli/module/: discovery.cpp
src/cmake/: fetch_orbbec.cmake  install_udev_rules.cmake
src/discovery/: main.cpp
src/module/: depth_sensor_control.hpp  device_control.hpp  discovery.cpp  discovery.hpp  encoding.cpp  encoding.hpp  main.cpp  orbbec.cpp  orbbec.hpp  orbbec_firmware.cpp  orbbec_firmware.hpp  orbbec_windows_registry.cpp  orbbec_windows_registry.hpp
tests/: astra2_test.go  go.mod  go.sum  main_test.go
